# PluginFrameWork

./: .gitignore  AiProcessorImpl.cpp  AiProcessorImpl.h  CMakeLists.txt  Interface.h  main.cpp
AiPluginTest/: AiPluginTest.cpp  AiPluginTest.h  CMakeLists.txt
